bug with 1px media query gap on iPad. related to ORG-2008

--- a/stylesheets/_settings.scss
+++ b/stylesheets/_settings.scss
@@ -116,7 +116,7 @@ $include-html-classes: true;
 
 // Media Queries
 
-// $small-screen: 768px;
+$small-screen: 769px;
 // $medium-screen: 1280px;
 // $large-screen: 1440px;
 
